feat: add config rabbitmq

--- a/src/Services/capygram.Auth/appsettings.Development.json
+++ b/src/Services/capygram.Auth/appsettings.Development.json
@@ -12,5 +12,17 @@
   },
   "JwtOptions": {
     "SecretKey": "HtiW]$~aBHYQjy3OI|NSMJ4*XlJ/SD$`"
+  },
+  "MasstransitOptions": {
+
+    "Host": "localhost",
+    "VHost": "capygram",
+    "UserName": "guest",
+    "Password": "guest",
+    "ExchangeName": "send-notification-exchange",
+    "ExchangeType": "topic",
+    "SmsQueueName": "sms-queue",
+    "EmailQueueName": "email-queue"
+    
   }
 }
