--- a/src/Services/capygram.Auth/Dockerfile
+++ b/src/Services/capygram.Auth/Dockerfile
@@ -1,26 +1,31 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-nanoserver-1809 AS base
+# Use base image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0-nanoserver-1809 AS build
+# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Services/capygram.Auth/capygram.Auth.csproj", "src/Services/capygram.Auth/"]
-RUN dotnet restore "./src/Services/capygram.Auth/capygram.Auth.csproj"
-COPY . .
-WORKDIR "/src/src/Services/capygram.Auth"
-RUN dotnet build "./capygram.Auth.csproj" -c %BUILD_CONFIGURATION% -o /app/build
 
+# Copy csproj files and restore dependencies
+COPY ./capygram.Auth/capygram.Auth.csproj capygram.Auth/
+COPY ./capygram.Common/capygram.Common.csproj capygram.Common/
+RUN dotnet restore "capygram.Auth/capygram.Auth.csproj"
+
+# Copy the rest of the files and build the project
+COPY ./capygram.Auth/ capygram.Auth/
+COPY ./capygram.Common/ capygram.Common/
+WORKDIR "/src/capygram.Auth"
+RUN dotnet build "capygram.Auth.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./capygram.Auth.csproj" -c %BUILD_CONFIGURATION% -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "capygram.Auth.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# Final stage
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
